chore:products list swagger
